# kids-ai

./: .env.example  Cargo.toml
src/: chat.rs  config.rs  main.rs  openrouter.rs  system_prompt.rs  telegram.rs  ui.rs
