[package]
name = "kids-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
crossterm = "0.28"
dotenvy = "0.15"
anyhow = "1"
thiserror = "2"
tokio-stream = "0.1"
futures = "0.3"
